[gd_scene load_steps=2 format=3 uid="uid://bd41tkl1b3hom"]

[ext_resource type="Script" uid="uid://dejiwqqiw4afq" path="res://main.gd" id="1_qbsmt"]

[node name="Main" type="Node2D"]
script = ExtResource("1_qbsmt")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(575, 322)

[node name="StartButton" type="Button" parent="."]
offset_left = 24.0
offset_top = 11.0
offset_right = 116.0
offset_bottom = 38.0
text = "Start"

[node name="LogBoxPanel" type="Panel" parent="."]
anchors_preset = -1
anchor_left = 0.6
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 650.0
offset_right = 1150.0
offset_bottom = 644.0
grow_horizontal = 0
grow_vertical = 2
size_flags_vertical = 3

[node name="LogBox" type="RichTextLabel" parent="LogBoxPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
